force-app/main/default/objects/Researcher_Classification_Code__c/Researcher_Classification_Code__c.object-meta.xml
<CustomObject>
    <label>Researcher Classification Code</label>
    <nameField>
        <displayFormat>RCC-{000000000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Researcher Classification Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>