force-app/main/default/objects/Researcher_Classification_Code__c/fields/Classification_Master__c.field-meta.xml
<CustomField>
    <fullName>Classification_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Code</label>
    <referenceTo>Classification_Master__c</referenceTo>
    <relationshipLabel>Researcher Classification Codes</relationshipLabel>
    <relationshipName>Researcher_Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>