force-app/main/default/objects/Researcher_Classification_Code__c/fields/Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Number__c</fullName>
    <formula>VALUE(TEXT( Percentage__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>