force-app/main/default/objects/Researcher_Classification_Code__c/fields/Researcher__c.field-meta.xml
<CustomField>
    <fullName>Researcher__c</fullName>
    <label>Researcher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Researcher Classification Codes</relationshipLabel>
    <relationshipName>Researcher_Classification_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>